--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Image Grid Layout using flexbox, semantic html and responsive">
+   <meta http-equiv="refresh" content="30">
+   <meta name="author" content="Md Parvej">
+   <meta name="robots" content="index, follow">
+   <meta property="og:description" 
+   content="Image Grid Layout, Html, Css, flexbox."
+   >
+   <meta property="og:title" content="Image Grid Layout Responsive">
+   <meta property="og:url" content="md-parvej-image-grid-layout.vercel.app">
+   <meta property="og:type" content="website">
+
    <link rel="stylesheet" href="style.css" />
    <title>Image Grid Layout</title>
 </head>
 <body>
-   
+   <section class="container">
+   <h1 style="text-align: center;">Image Grid Layout</h1 style="text-align: center;">
+
+      <section class="grid-images">
+         <section class="column">
+            <img src="https://images.unsplash.com/photo-1725060555163-c1fd4f569925?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" /> 
+            <img src="https://images.unsplash.com/photo-1725042893312-5ec0dea9e369?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+         </section>
+         <section class="column">
+            <img src="https://plus.unsplash.com/premium_photo-1695582868702-5b0f91584d00?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+            <img src="https://images.unsplash.com/photo-1724862830679-954d49573f3f?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+         </section>
+         <section class="column">
+            <img src="https://images.unsplash.com/photo-1724747891638-68862b7b3165?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+            <img src="https://plus.unsplash.com/premium_photo-1724863374168-cc3334387b81?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+         </section>
+      </section>
+   </section>
 </body>
 </html>
